fix: Convert classes to records & simplify stream collector